changed email to email

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 
       <th>Last name</th>
 
-      <th>Emial</th>
+      <th>Email</th>
 
       <th>Street address</th>
       <th>City</th>
@@ -27,7 +27,7 @@
 
         <td><%= user.last_name %></td>
 
-        <td><%= user.emial %></td>
+        <td><%= user.email %></td>
 
         <td><%= user.street_address %></td>
         <td><%= user.city %></td>
