--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,8 +26,8 @@
 
 
   <div class="field">
-    <%= form.label :emial %>
-    <%= form.text_field :emial %>
+    <%= form.label :email %>
+    <%= form.text_field :email %>
   </div>
 
 
